responsive design added

--- a/Natours/starter/package.json
+++ b/Natours/starter/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "concat": "^1.0.3",
     "node-sass": "^8.0.0"
   },
   "name": "ypi-natours",
@@ -7,7 +8,9 @@
   "description": "Landing page for Natours",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:sass": "concat"
   },
   "author": "YarPetru",
   "license": "ISC"
